@@ -37,7 +37,7 @@
 #include "../functional"
 #include <typeinfo>
 #include <tr1/type_traits>
-#include "../bits/cpp_type_traits.h"
+#include <bits/cpp_type_traits.h>
 #include <string>               // for std::tr1::hash
 #include <cstdlib>              // for std::abort
 
