@@ -1,3 +1,9 @@
+2005-03-03  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/tr1/functional: Convert relative path.
+
+	* docs/doxygen/user.cfg.in: Add tr1 includes.
+
 2005-03-03  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/tr1/type_traits: Implemenet is_polymorphic.
